<resources>
    <string name="app_name">Paint Art</string>

    <string name="line_weight">Thickness</string>
    <string name="color">Colorize</string>
    <string name="opacity">Opacity</string>
    <string name="erase">Eraser</string>
    <string name="clean">Clean</string>
    <string name="lock">Lock Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>